istio/istio-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-liberty-service
spec:
  host: spring-liberty-service
  subsets:
    - name: v1
      labels:
        version: v1
#    - name: v2
#      labels:
#        version: v2
